--- a/index.html
+++ b/index.html
@@ -6,7 +6,148 @@
     <title>Javascript</title>
   </head>
   <body>
-    <h1 class="titulo_contenido">Alan Congregado</h1>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <div class="container-fluid d-flex">
+        <a class="navbar-brand" href="index.html"><img src="./img/logo.png" class="logo" alt="logo"></a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0" >
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="index.html">Tienda</a>
+            </li>
+          <form class="d-flex">
+            <input class="form-control me-2" type="search" placeholder="¿Qué buscás?" aria-label="Search">
+            <button class="btn btn-outline-success" type="submit">Buscar</button>
+          </form>
+          <form class="d-flex">
+            <input class="form-control me-2" type="text" placeholder="Usuario" id="user">
+            <input class="form-control me-2" type="password" placeholder="Contraseña" id="pass">
+            <div class="form-check">
+              <input class="form-check-input pt-2" type="checkbox" value="" id="recordarme">
+              <label class="form-check-label" for="recordarme">
+                  Recordarme
+              </label>
+          </div>
+            <button class="btn btn-outline-success" type="submit">Iniciar Sesión</button>
+          </form>
+        </div>
+      </div>
+    </nav>
+    <div class="page-content">
+      <div class="product-container col-6 col-md-6">
+          <h3 class="product-name">Disco 5kg</h3>
+          <img src="./img/disco5.png" alt="" srcset="" class="product-img" />
+        <div class="item-details">
+          <h3 class="product-price">$2000</h3>
+          <button class="product-add">Agregar al carrito</button>
+        </div>
+      </div>
+      <div class="product-container col-6 col-md-6">
+        <h3 class="product-name">Disco 10kg</h3>
+        <img src="./img/disco10.png" alt="" srcset="" class="product-img" />
+      <div class="item-details">
+        <h3 class="product-price">$3000</h3>
+        <button class="product-add">Agregar al carrito</button>
+      </div>
+      </div>
+      <div class="product-container col-4 col-md-6">
+        <h3 class="product-name">Disco 15kg</h3>
+        <img src="./img/disco15.png" alt="" srcset="" class="product-img" />
+        <div class="item-details">
+          <h3 class="product-price">$4000</h3>
+          <button class="product-add">Agregar al carrito</button>
+        </div>
+      </div>
+      <div class="product-container col-4 col-md-6">
+        <h3 class="product-name">Disco 20kg</h3>
+        <img src="./img/disco20.png" alt="" srcset="" class="product-img" />
+        <div class="item-details">
+          <h3 class="product-price">$5000</h3>
+          <button class="product-add">Agregar al carrito</butto>
+          </div>
+      </div>
+    </div>
+    <!-- SECCION DEL CARRITO -->
+    <section class="shopping-cart">
+      <div class="container">
+          <h1 class="text-center">CARRITO</h1>
+          <hr>
+          <div class="row">
+              <div class="col-6">
+                  <div class="shopping-cart-header">
+                      <h6>Producto</h6>
+                  </div>
+              </div>
+              <div class="col-2">
+                  <div class="shopping-cart-header">
+                      <h6 class="text-truncate">Precio</h6>
+                  </div>
+              </div>
+              <div class="col-4">
+                  <div class="shopping-cart-header">
+                      <h6>Cantidad</h6>
+                  </div>
+              </div>
+          </div>
+          <!-- CARD ITEM  -->
+          <div class="shopping-cart-items shoppingCartItemsContainer">
+          </div>
+
+          <!-- CARD DEL TOTAL -->
+          <div class="row">
+            <div class="col-12">
+                <div class="shopping-cart-total d-flex align-items-center">
+                    <p class="mb-0">Total</p>
+                    <p class="ml-4 mb-0 shoppingCartTotal">$0</p>
+                    <div class="toast ml-auto bg-info" role="alert" aria-live="assertive" aria-atomic="true"
+                        data-delay="2000">
+                        <div class="toast-header">
+                            <span>✅</span>
+                            <strong class="mr-auto ml-1 text-secondary">Elemento en el carrito</strong>
+                            <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                        <div class="toast-body text-white">
+                            Se aumentó correctamente la cantidad
+                        </div>
+                    </div>
+                    <button class="btn btn-success ml-3 comprarButton" type="button" data-toggle="modal"
+                        data-target="#comprarModal">Comprar</button>
+                </div>
+            </div>
+        </div>
+        <!-- MODAL COMPRA -->
+        <div class="modal fade" id="comprarModal" tabindex="-1" aria-labelledby="comprarModalLabel"
+        aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="comprarModalLabel">Gracias por su compra</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <p>Pronto recibirá su pedido</p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- FINAL MODAL -->
+  </div>
+
+</section>
+<!-- FOOTER -->        
+<footer class="">
+  <p class="bg-success">Wodtime</p>
+</footer>
+      <!-- SCRIPTS -->
 
     <script src="./js/script.js"></script>
   </body>
